--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "jwt-decode": "^4.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.11.0"
+    "react-router-dom": "^7.11.0",
+    "sonner": "^2.0.7",
+    "sooner": "^1.1.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
