Add checkout, wishlist, orders, payment and invoice features

--- a/E-Commerce/appsettings.json
+++ b/E-Commerce/appsettings.json
@@ -15,28 +15,20 @@
     "DurationInMinutes": 60
   },
 
-  "Smtp": {
-    "Host": "smtp.gmail.com",
-    "Port": 587,
-    "EnableSsl": true,
-    "Username": "khushiojha01690@gmail.com",
-    "Password": "txeeoovncbzkeueo"
+  "AppSettings": {
+    "EmailSettings": {
+      "From": "khushiojha01690@gmail.com",
+      "Username": "khushiojha01690@gmail.com",
+      "Password": "dbmjzcmzitxhvgba",
+      "SmtpServer": "smtp.gmail.com",
+      "Port": 587
+    }
   },
 
-  //"AppSettings": {
-  //  "EmailSettings": {
-  //    "From": "khushiojha01690@gmail.com",
-  //    "Username": "",
-  //    "Password": "txeeoovncbzkeueo",
-  //    "SmtpServer": "smtp.gmail.com",
-  //    "Port": 587
-  //  }
-
-    //{
-    //  "Razorpay": {
-    //    "Key": "",
-    //    "Secret": ""
-    //  }
-    //}
+  
+    "Razorpay": {
+      "Key": "rzp_test_S6QkTjrryLsY7X",
+      "Secret": "fsEO459s154o2MlYX0oRG7ye"
+    }
   
 }
